# c3po

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  writeup.md
docs/: abstract.md  build_output.ipynb  combined_writeup.md  contrastive_loss.md  contrastive_loss_v2.md  data_generation.md  information_bottleneck.md  model_architecture.md  model_architecture_v2.md  predictive_sufficiency_and bases.md  toy_model.md  writeup.md
notebooks/: donghoon_mPFC_analysis.ipynb  donghoon_mpfc_training.ipynb  hippocampus_example.ipynb  hmm.ipynb  mPFC_example.ipynb  mec_analyze_embedding.ipynb  mec_analyze_embedding_thetaphase.ipynb  mec_analyze_headDecoding.ipynb  monkey_m1_maze_TRAIN.ipynb  monkey_s1_reach_ANALYZE.ipynb  monkey_s1_reach_TRAIN.ipynb  periodic_toy_model.ipynb  periodic_toy_model_INSTABILITY.ipynb  periodic_toy_model_multimodal_fields.ipynb  periodic_toy_model_non_coding_units.ipynb  periodic_toy_model_non_coding_units_ANALYZE.ipynb  rat_hpc_lineartrack_TRAIN.ipynb  rat_mpfc_TRAIN.ipynb
src/c3po/analysis/: analysis.py  band_filter.py  decoder_models.py  intervals.py  linear_assemblies.py  utils_io.py
src/c3po/model/: bidirectional_model.py  context.py  encoder.py  model.py  process_models.py  rate_prediction.py  util.py
src/c3po/tables/: c3po_tables.py  dev_tables.py
src/c3po/toy_model_generators/: hmm.py  phase.py
src/c3po/utils/: timeseries.py
tutorial/: sorted_units.ipynb
tutorial/demo_data/: spiking_data.pkl
workflows/: test_package_build.yml
